--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -1,10 +1,10 @@
-\documentclass[10pt,twocolumn]{extarticle}
+\documentclass[10pt]{extarticle}
 
 % Page layout
 \usepackage{geometry}
 \geometry{
   a4paper,
-  margin={0.75in},
+  margin={1in,1in},
 }
 \usepackage{setspace}
 % \linespread{1.25}
@@ -80,6 +80,10 @@
 
 % Fix references
 \usepackage{bookmark}
+
+% Tables and charts
+\usepackage{pgfplots}
+\usepackage{pgfplotstable}
 
 \begin{document}
 
