--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -84,6 +84,11 @@
 % Tables and charts
 \usepackage{pgfplots}
 \usepackage{pgfplotstable}
+\pgfplotsset{compat=1.17}
+
+\usepackage{tikz}
+\usetikzlibrary{external}
+\tikzexternalize[prefix=figures/]
 
 \begin{document}
 
