--- a/report/content.tex
+++ b/report/content.tex
@@ -1,28 +1,48 @@
 \pgfplotstableset{
   col sep=comma,
-  columns={model_name,context_window_size,context_window_operation,score},
+  columns={model,model_name,language,window,operation,similarity,score,time},
   column type=l,
   every head row/.style={before row=\hline,after row=\hline},
   every last row/.style={after row=\hline},
   skip rows between index={0}{1},
-  skip rows between index={6}{1000},
-  columns/model_name/.style={
+  columns/model/.style={
       column name=Model,
+      string type
+    },
+  columns/model_name/.style={
+      column name=Model name,
       string type,
       postproc cell content/.append style={
           @cell content={\texttt{##1}}
         }
     },
-  columns/context_window_size/.style={
+  columns/language/.style={
+      column name=Language,
+      string type,
+      postproc cell content/.append style={
+          @cell content={\texttt{##1}}
+        }
+    },
+  columns/window/.style={
       column name=Window size,
       int detect
     },
-  columns/context_window_operation/.style={
+  columns/operation/.style={
       column name=Operation,
+      string type
+    },
+  columns/similarity/.style={
+      column name=Similarity measure,
       string type
     },
   columns/score/.style={
       column name=Score,
+      fixed,
+      fixed zerofill,
+      precision=3,
+    },
+  columns/time/.style={
+      column name=Time (s),
       fixed,
       fixed zerofill,
       precision=3,
@@ -50,9 +70,9 @@ phenomena.
 Prior to the widespread availability of pre-trained word embeddings
 \parencites[e.g.,][]{Mikolov2013}{Pennington2014}, this problem was generally addressed
 by one of two approaches: firstly, by producing a representation for each sense of a
-target word and disambiguating between them in the given context; or secondly, by
-composing the representation of the target word with the representations of the words
-in its context.
+target word and disambiguating between them in the given context (\emph{word-sense
+  disambiguation}); or secondly, by composing the representation of the target word with
+the representations of the words in its context (\emph{contextualisation}).
 These approaches have been largely overshadowed by the advent of model architectures
 that take sequences as inputs and naturally produce \emph{contextual} representations
 of the items in the sequence, such as transformers \parencite{Vaswani2017}.
@@ -62,10 +82,8 @@ these contextual representations with the application of prior methods of
 contextualisation to static representations.
 SemEval-2020 Task 3, \emph{Graded Word Similarity in Context}
 \parencite{Armendariz2020a}, presents an opportunity to make such a comparison.
-Briefly, the task is to predict the change in the human judgment of similarity between
-the same pair of words in two different contexts.
-This objective is both context-dependent and continuous, i.e., not limited to discrete
-word-sense disambiguation.
+Briefly, the task is to predict the continuously-valued human judgment of similarity of
+the same pair of words in two different contexts (Section~\ref{task-definition}).
 I elected to focus on the first subtask, which is to predict the \emph{change} in
 similarity, rather than the similarity in each context.
 Specifically, I compared the results of computing the similarity between both kinds of
@@ -74,6 +92,7 @@ the words in a fixed-size context window, inspired by \textcite{Kintsch2001} and
 \textcite{Mitchell2008}.
 
 \section{Task definition}
+\label{task-definition}
 
 The CoSimLex dataset \parencite{Armendariz2020}, which served to evaluate the task
 submissions, extends the SimLex-999 dataset \parencite{Hill2015} to include multiple
@@ -87,75 +106,22 @@ contexts for each pair of words.
 
 \begin{figure}
   \centering
-  \begin{tikzpicture}
-    \begin{axis}[
-        title=Time vs. score,
-        xlabel={Score},
-        ylabel={Time (s)},
-      ]
-      \addplot+[only marks, mark size=1.0pt] table[
-          col sep=comma
-        ]{../results/543d797b/subtask1/static_en.csv};
-      \addplot+[only marks, mark size=1.0pt] table[
-          col sep=comma
-        ]{../results/543d797b/subtask1/static_fi.csv};
-      \addplot+[only marks, mark size=1.0pt] table[
-          col sep=comma
-        ]{../results/543d797b/subtask1/static_hr.csv};
-      \addplot+[only marks, mark size=1.0pt] table[
-          col sep=comma
-        ]{../results/543d797b/subtask1/static_sl.csv};
-    \end{axis}
-  \end{tikzpicture}
-
-  \caption{The elapsed time for each static-embedding model against its score.}
+  \pgfplotstabletypeset[
+    columns={model,model_name,score},
+    sort,
+    sort cmp=string <,
+    sort key=model_name,
+    sort key=model,
+    every row 10 column 2/.style={
+        postproc cell content/.style={
+            @cell content/.add={$}{^\dagger$}
+          }
+      },
+  ]{../results/model=static+contextual_language=fi_window=0_operation=none_similarity=cosine.csv}
+  \caption{The results in Finnish with a zero-size context window.}
 \end{figure}
 
-\begin{figure}
-  \centering
-  \pgfplotstabletypeset{../results/5ae22ab/subtask1/static_en.csv}
-  \caption{The top five results in English with static embeddings.}
-\end{figure}
-
-\begin{figure}
-  \centering
-  \pgfplotstabletypeset{../results/543d797b/subtask1/static_fi.csv}
-  \caption{The top five results in Finnish with static embeddings.}
-\end{figure}
-
-\begin{figure}
-  \centering
-  \pgfplotstabletypeset{../results/543d797b/subtask1/static_hr.csv}
-  \caption{The top five results in Croatian with static embeddings.}
-\end{figure}
-
-\begin{figure}
-  \centering
-  \pgfplotstabletypeset{../results/543d797b/subtask1/static_sl.csv}
-  \caption{The top five results in Slovakian with static embeddings.}
-\end{figure}
-
-\begin{figure}
-  \centering
-  \begin{tikzpicture}
-    \begin{axis}[
-        title=Time vs. score,
-        xlabel={Score},
-        ylabel={Time (s)},
-      ]
-      \addplot+[only marks, mark size=1.0pt] table[
-          col sep=comma
-        ]{../results/543d797b/subtask1/contextual_fi.csv};
-      \addplot+[only marks, mark size=1.0pt] table[
-          col sep=comma
-        ]{../results/543d797b/subtask1/contextual_hr.csv};
-      \addplot+[only marks, mark size=1.0pt] table[
-          col sep=comma
-        ]{../results/543d797b/subtask1/contextual_sl.csv};
-    \end{axis}
-  \end{tikzpicture}
-  \caption{The elapsed time for each contextual-embedding model against its score.}
-\end{figure}
+\import{.}{figure-score-window}
 
 \section{Conclusion}
 
